game-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game-app
  template:
    metadata:
      labels:
        app: game-app
    spec:
      containers:
      - name: game-container
        image: your-docker-image-url
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  type: NodePort
  selector:
    app: game-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
