game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
spec:
  rules:
  - host: game.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: game-service
            port:
              number: 80
